--- a/_vti_cnf/.gitignore
+++ b/_vti_cnf/.gitignore
@@ -4,3 +4,5 @@ vti_extenderversion:SR|12.0.0.0
 vti_cacheddtm:TX|19 Jun 2013 04:33:50 -0000
 vti_filesize:IR|2858
 vti_backlinkinfo:VX|
+vti_syncwith_68.178.246.6\:21/stanford:TX|19 Jun 2013 04:33:50 -0000
+vti_syncofs_68.178.246.6\:21/stanford:TW|18 Sep 2013 12:45:07 -0000
